<resources>
    <string name="app_name">TrainTrack</string>
    <string name="pageName">Trip Reminder</string>
    <string name="addReminder">+New Reminder</string>
    <string name="buttonUpdate">Update Reminder</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="reminder_content">Reminder Content</string>
    <string name="begin">Beginning</string>
    <string name="end">Destination</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remind">Set Reminder Before</string>
    <string name="logo_name">TrainTrackLogo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="nic">NIC(xxxxxxxxxV)</string>
    <string name="dob">DOB</string>
    <string name="email">E-mail</string>
    <string name="address">Address</string>
    <string name="phone">Phone(07xxxxxxxx)</string>
    <string name="agreement">By clicking Sign up, you agree to our Terms of service.</string>

    <string name="total">Total</string>
    <string name="add_payment_method">Select Credit/Debit Card</string>
    <string name="payment_page">Payment</string>
    <string name="add_new_card">New Card</string>
    <string name="amount_new">Amount</string>
    <string name="total_amount">Total</string>


    <string name="add_credit_debit_card">Credit/Debit Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on card</string>
    <string name="expiry_date">MM/YY</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="security_code">Security Code(CVV)</string>
    <string name="slash">/</string>
    <string name="save_the_card">Keep card for future transactions</string>
    <string name="done">Done</string>


    <string name="booking_summary">Booking Summary</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="pay_now">PAY NOW</string>
    <string name="plus">+</string>

    <string name="recent_payment">Recent Payments</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>

    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="schedule_train">Train Schedule</string>
    <string name="search">Search</string>
    <string name="purchase_ticket">Purchase Ticket</string>
    <string name="view_tickets">View Tickets</string>
    <string name="view_schedule">View Schedule</string>
    <string name="find_train">Find a Train</string>
    <string name="available">Available Trains</string>
    <string name="sample_train">Sample Train</string>
    <string name="next">Next</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="name_initials">Name with initials</string>
    <string name="select_date">Date(MM/DD/YYYY)</string>
    <string name="select_class">Select Class</string>
    <string name="no_of_passengers">No. of Passengers</string>
    <string name="proceed">Proceed</string>
    <string name="tickets">Tickets</string>
    <string name="purchased_tickets">Purchased Tickets</string>
    <string name="type_here">Type here...</string>
    <string name="ticketid">#ticketId</string>
    <string name="trainid">Train No</string>
    <string name="trainclass">Class</string>
    <string name="cls">Class</string>
    <string name="logout">Logout</string>
    <string name="Share_us"><u>Click Here to Share TrainTrack</u></string>

    <string name="title">Frequently Asked Questions</string>
    <string name="ticket_header">Your Ticket</string>
    <string name="ticket_holders_details">Ticket Holder\'s Details</string>
    <string name="note">*All the tickets are displayed here according to their unique IDs, Please press them to view e-Ticket</string>
    <string name="journey_details">Journey Details</string>
    <string name="trainid_class"><![CDATA[Your Train & Class]]></string>
    <string name="updateCard">Update</string>
    <string name="updating_card">Updating card</string>
    <string name="new_cvv">cvv</string>
    <string name="new_exp_date">Exp date</string>
    <string name="new_card_number">New card number</string>
    <string name="new_name_on_card">Name</string>
    <string name="card_submit">SUBMIT</string>


    <string-array name="stationsFrom">
        <item>From:</item>
        <item>Badulla</item>
        <item>Colombo Fort</item>
        <item>Galle</item>
        <item>Gampola</item>
        <item>Kandy</item>
    </string-array>

    <string-array name="stationsTo">
        <item>To:</item>
        <item>Badulla</item>
        <item>Colombo Fort</item>
        <item>Galle</item>
        <item>Gampola</item>
        <item>Kandy</item>
    </string-array>

    <string-array name="classType">
        <item>Select class:</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>



    <string name="updateReminder">Update Reminder</string>
    <string name="reminderId">Reminder Id</string>
    <string name="deleteButton">Delete Reminder</string>
    <string name="updateNote">Note: Since all the notices are based on your start and the destination of journey, you are not allowed to update them.</string>
    <string name="successful_message">You have successfully purchased ticket, Your ticket Id is</string>
    <string name="ticket_prices">Ticket Prices</string>
    <string name="first_class">First Class</string>
    <string name="second_class">Second Class</string>
    <string name="third_class">Third Class</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="cardpayment">cardpayment</string>
    <string name="card_1">card 1</string>
    <string name="newcvv">cvv</string>
    <string name="newexpdate">expdate</string>
    <string name="delete_card">Delete</string>
    <string name="new_card_numbers">new card number</string>
    <string name="payment_details">Payment Details</string>
</resources>
